<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D2009688"
    android:scrollbars="vertical|none"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="86dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="89dp"
        android:gravity="center"
        android:text="@string/txt_title"
        android:textColor="@android:color/background_light"
        android:textSize="36sp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="86dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="87dp">

        <RadioButton
            android:id="@+id/rdbtn_mesa1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_mesa1"
            android:textColor="@android:color/background_light"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rdbtn_mesa2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_mesados"
            android:textColor="@android:color/background_light"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rdbtn_mesa3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_mesatres"
            android:textColor="@android:color/background_light"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rdbtn_mesa4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_mesacuatr"
            android:textColor="@android:color/background_light"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rdbtn_mesa5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_mesacinco"
            android:textColor="@android:color/background_light"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rdbtn_mesa6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_mesaseis"
            android:textColor="@android:color/background_light"
            android:textSize="20sp" />
    </RadioGroup>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="374dp"
        android:layout_marginEnd="46dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_aceptar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:onClick="Aceptar"
            android:text="@string/btn_Aceptar"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_cancelar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:onClick="Cancelar"
            android:text="@string/btn_Cancelar"
            android:textSize="20sp" />
    </TableRow>

</RelativeLayout>