<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D2009688"
    tools:context=".Main2Activity_IngrDatosFact">

    <EditText
        android:id="@+id/txt_razonsocial"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="64dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txt_nombres"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/txt_direccion"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="240dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txt_direccion"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/txt_cedula"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txt_identificacion"
        android:inputType="number"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/txt_telefono"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txt_telefono"
        android:inputType="number"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/txt_correo"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="365dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txt_email"
        android:inputType="textEmailAddress"
        android:textColorHint="@android:color/background_light"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtview_nromesa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/txt_subtitle"
        android:textColor="@android:color/background_light"
        android:textColorHint="#FFFFFF"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/txtview_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/txt_title2"
        android:textColor="@android:color/background_light"
        android:textSize="24sp" />

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="435dp">

        <Button
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="IngresarOrden"
            android:text="@string/txt_ingorden" />

        <Button
            android:id="@+id/button2"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_facturacion" />
    </TableRow>
</RelativeLayout>